--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   photo_view: ^0.14.0
   modal_bottom_sheet: ^2.1.2
   cached_network_image: ^3.2.3
+  webview_flutter: ^4.0.1
 
 
 dev_dependencies:
