--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   modal_bottom_sheet: ^2.1.2
   cached_network_image: ^3.2.3
   webview_flutter: ^4.0.1
+  flutter_screenutil: ^5.6.0
 
 
 dev_dependencies:
