--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,14 @@ dependencies:
   cached_network_image: ^3.2.3
   webview_flutter: ^4.0.1
   flutter_screenutil: ^5.6.0
+  firebase_core: ^2.4.1
+  firebase_messaging: ^14.2.1
+  firebase_analytics: ^10.1.0
+  flutter_local_notifications: ^13.0.0
+  firebase_auth: ^4.2.0
+  google_sign_in: ^5.4.2
+  flutter_facebook_auth: ^5.0.7
+  flutter_easyloading: ^3.0.5
 
 
 
