--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -5,7 +5,7 @@
 	<key>CLIENT_ID</key>
 	<string>346442533727-gete8b3cj00avbs9qpdgcahgc63a7i0u.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.346442533727-gete8b3cj00avbs9qpdgcahgc63a7i0u</string>
+	<string></string>
 	<key>API_KEY</key>
 	<string>AIzaSyA0trLS8U7z7sgIrPptW18-qS8rknAbCAI</string>
 	<key>GCM_SENDER_ID</key>
