--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>346442533727-gete8b3cj00avbs9qpdgcahgc63a7i0u.apps.googleusercontent.com</string>
+	<string>346442533727-2jbo5asgbq2ologmidqaq5euoda5gfln.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string></string>
+	<string>com.googleusercontent.apps.346442533727-2jbo5asgbq2ologmidqaq5euoda5gfln</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>346442533727-hanqriv2kjntq49e5fjfoglkd83i7lfn.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyA0trLS8U7z7sgIrPptW18-qS8rknAbCAI</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.dogNews</string>
+	<string>com.dogexp.dogNews</string>
 	<key>PROJECT_ID</key>
 	<string>dogexpress-30ff0</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +31,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:346442533727:ios:aa1faa070e4c7973f804ea</string>
+	<string>1:346442533727:ios:7997ee12c67aa82cf804ea</string>
 	<key>DATABASE_URL</key>
 	<string>https://dogexpress-30ff0-default-rtdb.firebaseio.com</string>
 </dict>
