--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   google_sign_in: ^5.4.2
   flutter_facebook_auth: ^5.0.7
   flutter_easyloading: ^3.0.5
+  change_app_package_name: ^1.1.0
 
 
 
