--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   flutter_facebook_auth: ^5.0.7
   flutter_easyloading: ^3.0.5
   sign_in_with_apple: ^4.3.0
+  flutter_overlay_loader: ^2.0.0
+  shimmer: ^2.0.0
 
 
 
