--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,11 @@ dependencies:
   sign_in_with_apple: ^4.3.0
   flutter_overlay_loader: ^2.0.0
   shimmer: ^2.0.0
+  flutter_share: ^2.0.0
+  mailto: ^2.0.0
+  url_launcher: ^6.1.7
+  flutter_email_sender: ^5.2.0
+  intl:
 
 
 
