--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
     sdk: flutter
 
   authentication:
-    path: ./authentication
+    git:
+      url: https://github.com/KiranPrimotech/authentication.git
+      ref: master
 
 
 
